--- a/project.properties
+++ b/project.properties
@@ -1,5 +1,5 @@
 # set environment variables APACHE_USER and APACHE_PASSWORD for the web-access
-maven.repo.remote=http://${APACHE_USER}:${APACHE_PASSWORD}@torwald.gistec-online.de/ingrid/maven/,http://www.ibiblio.org/maven/
+maven.repo.remote=http://${APACHE.USER}:${APACHE.PASSWORD}@torwald.gistec-online.de/ingrid/maven/,http://www.ibiblio.org/maven/
 
 maven.repo.list=R1
 maven.repo.R1=file:///srv/www/htdocs/ingrid/
