--- a/project.properties
+++ b/project.properties
@@ -1,4 +1,4 @@
-# set environment variables APACHE_USER and APACHE_PASSWORD for the web-access
+# set environment variables APACHE.USER and APACHE.PASSWORD for the web-access
 maven.repo.remote=http://${APACHE.USER}:${APACHE.PASSWORD}@torwald.gistec-online.de/ingrid/maven/,http://www.ibiblio.org/maven/
 
 maven.repo.list=R1
