--- a/project.properties
+++ b/project.properties
@@ -9,6 +9,8 @@ maven.changelog.factory=org.apache.maven.svnlib.SvnChangeLogFactory
 maven.xdoc.date=left
 maven.xdoc.date.format=yyyy-MM-dd HH:mm:ss Z
 
+maven.junit.fork=true
+
 #set environment variables needed to build, deploy and run by using the weta-g server
 weta.server.name=weta-g-latest
 weta.server.suffix=.zip
