--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/ingrid/jars/ingrid-utils-0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/quartz/jars/quartz-1.5.0.jar"/>
+	<classpathentry sourcepath="/WORKSPACE/src" kind="var" path="MAVEN_REPO/quartz/jars/quartz-1.5.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
