o added maven checkstyle plugin o added license header file o added modified sun check style file o use the same commons-logging version for eclipse and maven

--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,7 @@ maven.junit.fork=true
 weta.server.name=weta-g-latest
 weta.server.suffix=.zip
 weta.server.destination=work
+
+#checkstyle
+maven.checkstyle.properties = sun_checks.xml
+maven.checkstyle.header.file= license_header.txt
