--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,12 @@
 	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/ingrid/jars/ingrid-utils-0.1-SNAPSHOT.jar"/>
 	<classpathentry sourcepath="/WORKSPACE/src" kind="var" path="MAVEN_REPO/quartz/jars/quartz-1.5.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/communication-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/communication-sockets-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/remote-proxies-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/cglib/jars/cglib-nodep-2.1_3.jar"/>
+	<classpathentry sourcepath="MAVEN_REPO/ingrid/jars/ingrid-ibus-0.1-SNAPSHOT.jar" kind="var" path="MAVEN_REPO/ingrid/jars/ingrid-ibus-0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/log4j/jars/log4j-1.2.8.jar"/>
+	<classpathentry kind="src" path="/ingrid-utils"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
