--- a/project.properties
+++ b/project.properties
@@ -19,3 +19,11 @@ weta.server.destination=work
 #checkstyle
 maven.checkstyle.properties = sun_checks.xml
 maven.checkstyle.header.file= license_header.txt
+
+#pmd
+maven.pmd.enable=true
+maven.pmd.cpd.enable=true
+maven.pmd.cpd.minimumtokencount=40
+
+#changelog - developer activity
+maven.changelog.range=365
