ui related improvements

--- a/src/conf/quartz.properties
+++ b/src/conf/quartz.properties
@@ -9,6 +9,6 @@ org.quartz.threadPool.threadPriority = 5
 org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = true
 
 org.quartz.jobStore.class = de.ingrid.iplug.scheduler.FileJobStore
-org.quartz.jobStore.storeFilePath = quartzstore
+#org.quartz.jobStore.storeFilePath = quartzstore
 org.quartz.jobStore.misfireThreshold = 60000
 
