--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Sun Java 1.4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/IBMJava2-ppc-142"/>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="src/webapps"/>
 	<classpathentry kind="src" path="src/test"/>
@@ -10,7 +10,7 @@
 	<classpathentry kind="var" path="MAVEN_REPO/commons-digester/jars/commons-digester-1.6.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
-	<classpathentry sourcepath="/WORKSPACE/src" kind="var" path="MAVEN_REPO/quartz/jars/quartz-1.5.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/quartz/jars/quartz-1.5.0.jar" sourcepath="/WORKSPACE/src"/>
 	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/communication-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/log4j/jars/log4j-1.2.8.jar"/>
 	<classpathentry kind="src" path="/ingrid-utils"/>
@@ -24,7 +24,8 @@
 	<classpathentry kind="var" path="MAVEN_REPO/jetty/jars/servlet-api-2.5-6.0.0beta6.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ingrid-ibus"/>
 	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/communication-sockets-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/communication-jxta-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ingrid-ibus-client"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/communication-http"/>
+	<classpathentry kind="var" path="MAVEN_REPO/weta-components/jars/communication-jxta-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
