--- a/project.properties
+++ b/project.properties
@@ -30,5 +30,5 @@ maven.changelog.range=365
 
 maven.scm.tag=1.0.0
 maven.scm.version=1.0.0
-maven.scm.bootstrap.goals=java:compile jar:deploy
+maven.scm.bootstrap.goals=java:compile,jar:deploy
 maven.scm.svn.tag.base=https://127.0.0.1:444/svn/ingrid/ingrid-iplug/tags
