--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,15 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>de.ingrid.m2</id>
-      <name>Maven2 Repo InGrid</name>
-      <url>http://harrison.its-technidata.de/ingrid/maven2</url>
-    </repository>
-    <repository>
       <id>de.ingrid.m1</id>
       <name>Maven1 Repo InGrid</name>
       <url>http://harrison.its-technidata.de/ingrid/maven</url>
+      <layout>legacy</layout>
+    </repository>
+    <repository>
+      <id>de.ingrid.m2</id>
+      <name>Maven1 Repo InGrid</name>
+      <url>http://harrison.its-technidata.de/ingrid/maven2</url>
     </repository>
   </repositories>
   <build>
