--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>ingrid-base-pom</artifactId>
     <groupId>de.ingrid</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.ingrid</groupId>
@@ -50,12 +50,6 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>de.ingrid.m1</id>
-      <name>Maven1 Repo InGrid</name>
-      <url>http://harrison.its-technidata.de/ingrid/maven</url>
-      <layout>legacy</layout>
-    </repository>
-    <repository>
       <id>de.ingrid.m2</id>
       <name>Maven1 Repo InGrid</name>
       <url>http://harrison.its-technidata.de/ingrid/maven2</url>
@@ -70,6 +64,7 @@
         <version>2.3</version>
         <configuration>
           <forkMode>always</forkMode>
+          <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <includes>
             <include>**/*Test.java</include>
           </includes>
