--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
   <repositories>
     <repository>
       <id>de.ingrid.m2</id>
-      <name>Maven1 Repo InGrid</name>
-      <url>http://harrison.its-technidata.de/ingrid/maven2</url>
+      <name>Maven2 Repo InGrid</name>
+      <url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
     </repository>
   </repositories>
   <build>
