--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-ibus-client</artifactId>
+      <version>1.2.3-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.ingrid</groupId>
+      <artifactId>ingrid-utils</artifactId>
+      <version>1.2.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>quartz</groupId>
