--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
       <version>1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>quartz</groupId>
+      <groupId>opensymphony</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
     <dependency>
