--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <version>1.3.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>de.ingrid</groupId>
+      <artifactId>ingrid-communication</artifactId>
+      <version>1.2.2-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>opensymphony</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
