--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,29 @@
       <groupId>opensymphony</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
+<!-- KEEP TOMCAT / JETTY DEPENDENCIES HERE ! (also transitive from iBus, but iPlug needs them and also other projects excluding iBus !) -->
+    <dependency>
+      <groupId>tomcat</groupId>
+      <artifactId>jasper-compiler</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>tomcat</groupId>
+      <artifactId>jasper-runtime</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jetty</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jetty</groupId>
+      <artifactId>org.mortbay.jetty</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
