- removing restart of ibus client when heart beat failed - preparation of a heart beat monitor in case a socket exception occured and the ibus client was shut down. In this case we need to try to restart the connection and update the ibus references in all heartbeats! - added some testcases for real iBus tests, which have to be executed manually (starting an iBus locally)

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-ibus</artifactId>
+      <version>1.4.0-SNAPSHOT</version>
       <!-- EXCLUDE non released plugs to avoid problems during release -->
       <exclusions>
           <exclusion>
@@ -32,7 +33,13 @@
     </dependency>
     <dependency>
       <groupId>de.ingrid</groupId>
+      <artifactId>ingrid-communication</artifactId>
+      <version>1.4.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.ingrid</groupId>
       <artifactId>ingrid-ibus-client</artifactId>
+      <version>1.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-betwixt</groupId>
@@ -89,6 +96,7 @@
           <excludes>
             <exclude>**/v01/*</exclude>
             <exclude>**/v05/*</exclude>
+            <exclude>**/ibus/*</exclude>
           </excludes>
         </configuration>
       </plugin>
