--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,15 @@
     <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug/trunk</connection>
     <developerConnection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug/trunk</developerConnection>
   </scm>
+  <dependencyManagement>
+  <dependencies>
+      <dependency>
+      <groupId>de.ingrid</groupId>
+      <artifactId>ingrid-ibus-client</artifactId>
+      <version>3.3.0-SNAPSHOT</version>
+    </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
@@ -93,7 +102,6 @@
           <excludes>
             <exclude>**/v01/*</exclude>
             <exclude>**/v05/*</exclude>
-            <exclude>**/ibus/*</exclude>
           </excludes>
         </configuration>
       </plugin>
