--- a/pom.xml
+++ b/pom.xml
@@ -2,27 +2,18 @@
   <parent>
     <artifactId>ingrid-base-pom</artifactId>
     <groupId>de.ingrid</groupId>
-    <version>3.2.0</version>
+    <version>3.3.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-iplug</artifactId>
   <packaging>jar</packaging>
-  <version>3.3.0-SNAPSHOT</version>
+  <version>3.3.0-RELEASE-SNAPSHOT</version>
   <name>ingrid-iplug</name>
   <scm>
     <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug/trunk</connection>
     <developerConnection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug/trunk</developerConnection>
   </scm>
-  <dependencyManagement>
-  <dependencies>
-      <dependency>
-      <groupId>de.ingrid</groupId>
-      <artifactId>ingrid-ibus-client</artifactId>
-      <version>3.3.0-SNAPSHOT</version>
-    </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
@@ -80,11 +71,11 @@
     </dependency>
   </dependencies>
   <repositories>
-    <repository>
-      <id>de.ingrid.m2</id>
-      <name>Maven2 Repo InGrid</name>
-      <url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
-    </repository>
+        <repository>
+          <id>de.ingrid.all</id>
+          <name>Maven Repo InGrid</name>
+          <url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
+        </repository>
   </repositories>
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
