--- a/pom.xml
+++ b/pom.xml
@@ -62,12 +62,12 @@
     <dependency>
       <groupId>jetty</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>2.4</version>
+      <version>2.5-6.0.0beta6</version>
     </dependency>
     <dependency>
       <groupId>jetty</groupId>
       <artifactId>org.mortbay.jetty</artifactId>
-      <version>6.1.14</version>
+      <version>5.1.8</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
