--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   <version>3.5.0-SNAPSHOT</version>
   <name>ingrid-iplug</name>
   <scm>
-    <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug/trunk</connection>
-    <developerConnection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug/trunk</developerConnection>
+    <connection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</connection>
+    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</developerConnection>
   </scm>
   <dependencies>
     <dependency>
@@ -80,7 +80,7 @@
         <repository>
           <id>de.ingrid.all</id>
           <name>Maven Repo InGrid</name>
-          <url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
+          <url>https://dev.informationgrid.eu/archiva/repository/ingrid-all</url>
         </repository>
   </repositories>
   <build>
