--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-iplug</artifactId>
   <packaging>jar</packaging>
-  <version>3.5.0-SNAPSHOT</version>
+  <version>3.5.0</version>
   <name>ingrid-iplug</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</connection>
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</developerConnection>
+    <tag>ingrid-iplug-3.5.0</tag>
   </scm>
   <dependencies>
     <dependency>
