--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-iplug</artifactId>
   <packaging>jar</packaging>
-  <version>3.6.0-SNAPSHOT</version>
+  <version>3.6.1-SNAPSHOT</version>
   <name>ingrid-iplug</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</connection>
@@ -81,6 +81,12 @@
       <groupId>jetty</groupId>
       <artifactId>org.mortbay.jetty</artifactId>
       <version>5.1.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <!-- The version differs from base springframework! -->
+      <version>4.0.2.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
