--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-iplug</artifactId>
   <packaging>jar</packaging>
-  <version>3.6.1-SNAPSHOT</version>
+  <version>3.6.1</version>
   <name>ingrid-iplug</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</connection>
