--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
     </dependency>
   </dependencies>
   <repositories>
-        <repository>
-          <id>de.ingrid.all</id>
-          <name>Maven Repo InGrid</name>
-          <url>https://dev.informationgrid.eu/archiva/repository/ingrid-all</url>
-        </repository>
+    <repository>
+      <id>nexus</id>
+      <name>Nexus Repo</name>
+      <url>https://nexus.informationgrid.eu/repository/maven-public</url>
+    </repository>
   </repositories>
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
