--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ingrid-iplug</artifactId>
   <packaging>jar</packaging>
-  <version>5.0.0</version>
+  <version>5.3.0-SNAPSHOT</version>
   <name>ingrid-iplug</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</connection>
@@ -17,17 +17,13 @@
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
-      <artifactId>ingrid-ibus</artifactId>
-      <version>4.2.0</version>
+      <artifactId>ingrid-ibus-backend</artifactId>
+      <version>5.2.0</version>
       <!-- EXCLUDE non released plugs to avoid problems during release -->
       <exclusions>
           <exclusion>
               <groupId>de.ingrid</groupId>
               <artifactId>ingrid-iplug-dsc</artifactId>
-          </exclusion>
-          <exclusion>
-              <groupId>de.ingrid</groupId>
-              <artifactId>ingrid-iplug-tamino</artifactId>
           </exclusion>
       </exclusions>
     </dependency>
