Adapt Jenkinsfile and cleanup

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+  <!-- ==================== PROPERTIES ==================== -->
+  <properties>
+  <java.version>17</java.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
@@ -101,24 +106,6 @@
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
     <plugins>
-      <plugin>
-        <groupId>org.openrewrite.maven</groupId>
-        <artifactId>rewrite-maven-plugin</artifactId>
-        <version>4.35.1</version>
-        <configuration>
-          <activeRecipes>
-            <recipe>org.openrewrite.java.migrate.UpgradeJava17</recipe>
-          </activeRecipes>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.openrewrite.recipe</groupId>
-            <artifactId>rewrite-migrate-java</artifactId>
-            <version>1.13.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
