--- a/pom.xml
+++ b/pom.xml
@@ -23,22 +23,8 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-ibus-backend</artifactId>
-      <version>5.15.0.3324-SNAPSHOT</version>
-      <!-- EXCLUDE non released plugs to avoid problems during release -->
-      <exclusions>
-        <exclusion>
-          <groupId>de.ingrid</groupId>
-          <artifactId>ingrid-iplug-dsc</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>de.ingrid</groupId>
-          <artifactId>ingrid-ibus-frontend</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>5.14.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>de.ingrid</groupId>
@@ -60,12 +46,12 @@
     <dependency>
       <groupId>tomcat</groupId>
       <artifactId>jasper-compiler</artifactId>
-      <version>5.5.9</version>
+      <version>5.5.23</version>
     </dependency>
     <dependency>
       <groupId>tomcat</groupId>
       <artifactId>jasper-runtime</artifactId>
-      <version>5.5.9</version>
+      <version>5.5.23</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -73,26 +59,22 @@
       <version>5.9.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>jetty</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5-6.0.0beta6</version>
-    </dependency>
+
     <dependency>
       <groupId>jetty</groupId>
       <artifactId>org.mortbay.jetty</artifactId>
-      <version>5.1.8</version>
+      <version>5.1.12</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-crypto</artifactId>
       <!-- The version differs from base springframework! -->
-      <version>4.0.2.RELEASE</version>
+      <version>5.7.3</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.8.0</version>
+      <artifactId>mockito-core</artifactId>
+      <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -116,10 +98,6 @@
           <includes>
             <include>**/*Test.java</include>
           </includes>
-          <excludes>
-            <exclude>**/v01/*</exclude>
-            <exclude>**/v05/*</exclude>
-          </excludes>
         </configuration>
       </plugin>
       <plugin>
