--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ingrid-iplug</artifactId>
   <packaging>jar</packaging>
-  <version>5.15.0-SNAPSHOT</version>
+  <version>dummy-SNAPSHOT</version>
   <name>ingrid-iplug</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-iplug.git</connection>
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-ibus-client</artifactId>
-      <version>5.15.0-SNAPSHOT</version>
+      <version>6.0.0</version>
       <exclusions>
         <exclusion>
           <groupId>junit</groupId>
