--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-ibus-client</artifactId>
-      <version>7.0.0</version>
+      <version>7.6.0-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>junit</groupId>
